force-app/main/default/objects/Archived_Email__b/Archived_Email__b.object-meta.xml
<CustomObject>
    <label>Archived Email</label>
    <pluralLabel>Archived Emails</pluralLabel>
</CustomObject>