force-app/main/default/objects/Archived_Email__b/fields/BCCAddress__c.field-meta.xml
<CustomField>
    <fullName>BCCAddress__c</fullName>
    <label>BCC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>