force-app/main/default/objects/Archived_Email__b/fields/CCAddress__c.field-meta.xml
<CustomField>
    <fullName>CCAddress__c</fullName>
    <label>CC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>