force-app/main/default/objects/Archived_Email__b/fields/Original_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Id__c</fullName>
    <label>Original Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>