force-app/main/default/objects/Archived_Email__b/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Archived Emails</relationshipLabel>
    <relationshipName>Archived_Emails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>